--- a/package.json
+++ b/package.json
@@ -1,13 +1,87 @@
 {
-  "name": "chat-example",
-  "version": "0.0.0",
-  "description": "A chat example to showcase how to use `socket.io` with a static `express` server with `async` for control flow.",
-  "main": "server.js",
-  "repository": "",
-  "author": "Mostafa Eweda <mo.eweda@gmail.com>",
+  "name": "quickblox",
+  "description": "QuickBlox JavaScript SDK",
+  "version": "2.5.1",
+  "homepage": "https://quickblox.com/developers/Javascript",
+  "main": "src/qbMain.js",
+  "license": "(Apache-2.0)",
+  "keywords": [
+    "quickblox",
+    "javascript",
+    "sdk",
+    "baas",
+    "cloud",
+    "api",
+    "chat",
+    "communication",
+    "messaging",
+    "webrtc"
+  ],
+  "maintainers": [
+    "Igor Khomenko <igor@quickblox.com>",
+    "Vlad Lukhanin <vladislav.lukhanin@quickblox.com>",
+    "Dima Lobanov <dmytro.lobanov@injoit.com>",
+    "Iegor Kozakov <iegor.kozakov@injoit.com>"
+  ],
+  "contributors": [
+    "Igor Khomenko <igor@quickblox.com>",
+    "Vlad Lukhanin <vladislav.lukhanin@quickblox.com>",
+    "Dima Lobanov <dmytro.lobanov@injoit.com>",
+    "Iegor Kozakov <iegor.kozakov@injoit.com>"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/QuickBlox/quickblox-javascript-sdk.git"
+  },
+  "bugs": {
+    "url": "https://github.com/QuickBlox/quickblox-javascript-sdk/issues",
+    "email": "web@quickblox.com"
+  },
   "dependencies": {
-    "async": "~0.2.8",
-    "express": "~3.2.4",
-    "socket.io": "~0.9.14"
+    "crypto-js": "3.1.2-2",
+    "node-xmpp-client": "^3.0.0",
+    "request": "^2.48.0",
+    "strophe.js": "^1.2.8",
+    "xml2js": "^0.4.13"
+  },
+  "devDependencies": {
+    "browserify": "^13.1.0",
+    "cross-env": "^3.1.2",
+    "ghooks": "^1.3.2",
+    "gulp": "^3.9.1",
+    "gulp-connect": "^5.0.0",
+    "gulp-notify": "^2.2.0",
+    "gulp-uglify": "^2.0.0",
+    "jaguarjs-jsdoc": "^1.0.1",
+    "jsdoc": "^3.4.3",
+    "jasmine": "^2.4.1",
+    "jquery-custom": "^1.1.1",
+    "jshint": "^2.9.3",
+    "jshint-stylish": "^2.2.1",
+    "pump": "^1.0.1",
+    "vinyl-source-stream": "^1.1.0"
+  },
+  "autoupdate": {
+    "source": "git",
+    "target": "git://github.com/QuickBlox/quickblox-javascript-sdk.git",
+    "basePath": "",
+    "files": [
+      "quickblox.min.js"
+    ]
+  },
+  "config": {
+    "ghooks": {
+      "pre-commit": "npm run lint",
+      "pre-push": "jasmine"
+    }
+  },
+  "scripts": {
+    "setDependencies": "npm i && npm i -g gulp-cli && npm install rimraf -g && npm install -g jasmine",
+    "lint": "jshint src --reporter=node_modules/jshint-stylish",
+    "develop": "cross-env NODE_ENV=develop gulp",
+    "build": "npm run lint && gulp build && gulp minify",
+    "generateBuildVersion": "gulp generate-build_version",
+    "docs": "rimraf docs && mkdir docs && jsdoc -c ./jsdoc.conf.json",
+    "start": "gulp connect"
   }
 }
